# zk-snarks-with-substrate

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  rustfmt.toml  shell.nix  types.json
.devcontainer/: devcontainer.json
blog/: groth16.md  introduction.md  zk-snark-pallet.md
blog/data/: proof.json  public.json  task.r1cs  task.wasm  verification_key.json  witness.wtns
circom/: README.md  justfile  task.circom
doc/: rust-setup.md
docs/: rust-setup.md
nix/: default.nix  sources.json
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  service.rs
pallets/feeless/: Cargo.toml
pallets/feeless/src/: lib.rs
pallets/gift/: Cargo.toml
pallets/gift/src/: lib.rs
pallets/kitties/: Cargo.toml
pallets/kitties/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/oohwee/: Cargo.toml
pallets/participate/src/: lib.rs
pallets/template/: Cargo.toml
pallets/template/src/: benchmarking.rs  lib.rs
pallets/utxo/: Cargo.toml
pallets/utxo/src/: lib.rs  mock.rs  tests.rs
pallets/zk-snarks/: Cargo.toml  README.md
pallets/zk-snarks/sample/: multiplier2_0000.zkey  multiplier2_0001.zkey  pot12_0001.ptau  proof.json  public.json  verification_key.json  verifier.sol
pallets/zk-snarks/sample/multiplier2_cpp/: multiplier2.cpp
pallets/zk-snarks/sample/multiplier2_js/: multiplier2.wasm
pallets/zk-snarks/src/: benchmarking.rs  common.rs  deserialization.rs  lib.rs  mock.rs  new_verifier.rs  tests.rs  verifier.rs  verify.rs  weights.rs
runtime/: Cargo.toml  types.json
runtime/src/: lib.rs
