[package]
name = "pallet-zk-snarks"
version = "4.0.0-dev"
authors = ["Michał Graliński <michal.gralinski@brightinventions.pl>"]
edition = "2021"
license = "Unlicense"
description = "FRAME example pallet"
readme = "README.md"
publish = false
repository = "https://github.com/bright/groth16-verifier-pallet/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.31", optional = true }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.31" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.31" }
sp-io = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.31" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.31" }
sp-std = { version = "4.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
bls12_381 = "0.7.0"
pairing = "0.22.0"
group = "0.12.1"
serde = { version = "1.0.149", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.89", default-features = false, features = ["alloc"]}
uint = { version = "0.8", default-features = false }

[dev-dependencies]
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.31" }

[features]
default = ["std"]
std = [
	"codec/std",
    "frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
    "sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    ]
try-runtime = ["frame-support/try-runtime"]
